--- a/contacts/public/login.html
+++ b/contacts/public/login.html
@@ -5,20 +5,18 @@
 <title>Contacts</title>
 <base href="/">
 <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css" />
-<link ng-href='https://bootswatch.com/cerulean/bootstrap.min.css' rel='stylesheet' type='text/css'>
+<link ng-href='https://bootswatch.com/slate/bootstrap.min.css' rel='stylesheet' type='text/css'>
 </head>
 <body style="font-family: Georgia, Serif;">
 	<div class="container">
-		<div class="row well">
-			<div class="col-sm-12">
-				<img class="img-rounded" src="images/RakutenSmall.png"/>
-				<h1 class="pull-right">
-					Search products <small>the way you want</small>
-				</h1>
-			</div>
+		<div class="col-sm-12" style="margin-top:1%">
+			<img class="img-rounded" src="images/RakutenSmall.png"/>
+			<h1 class="pull-right">
+				Search products <small>the way you want</small>
+			</h1>
 		</div>
 
-		<div class="row">
+		<div class="row" style="margin-top:15%">
 			<div class="col-sm-6 alert-success" style="border-radius:15px">
 				<form class="form-horizontal" action="/login" method="POST">
 					<h3>Log In</h3>
